--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    font-family: "Gill Sans", sans-serif;
-    font-size: 20px;
-    margin: 0px;
+	font-family: "Gill Sans", sans-serif;
+	font-size: 20px;
+	margin: 0px;
 	user-select: none;
 }
 .container {
@@ -10,11 +10,10 @@ body {
 	padding: 10px;
 	color: #367dff;
 }
-#inputImage, #saveImage {
+input[type=button], input[type=file] {
 	display: none;
 }
-/*
+
 canvas {
 	border: 1px solid #000000;
 }
-*/
